<?xml version="1.0"?>
<package format="2">
  <name>control_box_msgs</name>
  <version>0.0.1</version>
  <description>Messages to publish information from a simple box with switches and buttons for controlling robots</description>

  <maintainer email="adday@clemson.edu">Alex Day</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
